# semantic-vision

./: .gitignore  README.md  pom.xml
2nd_order_models_experiments/experiment_with_affine_transform/01_2conv1denseConstantW/: train.py
2nd_order_models_experiments/experiment_with_affine_transform/01_2conv1denseConstantW/rec_scores/: test.py
2nd_order_models_experiments/experiment_with_affine_transform/01_2conv1denseConstantW/test_plots2/: rotatepair_batch.py  test.py
2nd_order_models_experiments/experiment_with_affine_transform/02_2conv1denseVarW/: plot_funs.py  train.py
2nd_order_models_experiments/experiment_with_affine_transform/02_2conv1denseVarW/rec_scores/: plot1.sh
2nd_order_models_experiments/experiment_with_rotation/01_OriginModel/01_ConstantWAllAngles/: rotatepair_batch.py  train.py
2nd_order_models_experiments/experiment_with_rotation/01_OriginModel/02_ConstantWDiscreteAngles/: plot_funs.py  train.py
2nd_order_models_experiments/experiment_with_rotation/02_address_model/01_ConvolutionModelDIscreteAngles/: plot_funs.py  train.py
2nd_order_models_experiments/experiment_with_rotation_compensation/01_OriginConstantW/rec_scores/: plot2.sh  test.py
2nd_order_models_experiments/experiment_with_rotation_compensation/02_2conv1denseConstantW/: train.py
2nd_order_models_experiments/experiment_with_rotation_compensation/03_2conv1denseVarW/: train.py
docker/: Dockerfile
experiments/2dlstm/: README.md  lstm_pytorch.py  test.py
experiments/atomspace-storage/: README.md  build.gradle
experiments/class_modelling/mnist/: README.md
experiments/concept_learning/gans/: README.md
experiments/invariance/: README.md
experiments/invariance/hypernets/: Readme.md
experiments/mnist_class_modelling/: README.md
experiments/mnist_class_modelling/bVAE/: norm_explore.py
experiments/opencog/: GetFeatures.py
experiments/opencog/DNNs/: 01_test.py
experiments/opencog/ResNetForFeatures/: VqaMainLoop.py
experiments/opencog/cog_module/: README.md  cog.py  example.py  mnist.ipynb  mnist.py  module.py  pln.py  rules.py  setup.py  test.py
experiments/opencog/iot/: README.md
experiments/opencog/iot/proto6_KB/: main.py  (+5 more)
experiments/opencog/opencog-neuralnet/: CMakeLists.txt
experiments/opencog/opencog-neuralnet/cython/: CMakeLists.txt
experiments/opencog/opencog-neuralnet/cython/neuralnet/: CMakeLists.txt  neuralnet.pxd  ptrvalue.cc  ptrvalue.h  ptrvalue.pxd  ptrvalue.pyx
experiments/opencog/opencog-neuralnet/cython/neuralnet/opencog/: atomspace.pxd
experiments/opencog/opencog-neuralnet/cython/opencog/: CMakeLists.txt  atomspace.pxd  neuralnet.pxd  neuralnet.pyx  ptrvalue.h
experiments/opencog/opencog-neuralnet/opencog/neuralnet/: CMakeLists.txt  PtrValue.cc  PtrValue.h  neuralnet_atom_types.script  neuralnet_atom_types_init.cc
experiments/opencog/opencog-neuralnet/tests/: CMakeLists.txt
experiments/opencog/opencog-neuralnet/tests/cython/: CMakeLists.txt
experiments/opencog/opencog-neuralnet/tests/cython/neuralnet/: CMakeLists.txt  test_ptrvalue.py
experiments/opencog/opencog-neuralnet/tests/cython/opencog/: CMakeLists.txt  test_ptrvalue.py
experiments/opencog/opencog-neuralnet/tests/neuralnet/: CMakeLists.txt
experiments/opencog/opencog-neuralnet/tests/opencog/neuralnet/: CMakeLists.txt  PtrValueUTest.cxxtest
experiments/opencog/opencog-tensor/: CMakeLists.txt
experiments/opencog/opencog-tensor/atoms/: CMakeLists.txt  tensor_atom_types.script  tensor_atom_types_init.cc
experiments/opencog/pattern_matcher_vqa/: README.md  VqaMainLoop.py  answer_by_image.py  download_data.sh  gui_helpers.py  hypernet.py  interface-images.ipynb  interface.py  log.py  multidnn.py  network_runner.py  pattern_matcher_vqa.py  run.sh  run_tbd.py  splitmultidnnmodel.py  tbd.py  tbd_helpers.py  util.py  utils.py  vqa
experiments/opencog/pattern_miner_4_vqa/: QA_knowledge_base.scm  QA_knowledge_base_v2.scm
experiments/opencog/question2atomeese/: README.md  get_questions.py  pom.xml  question2atomeese.sh  record.py  unique_questions.py
experiments/opencog/question2atomese/: README.md  compute_stv.py  generate_training_questions.py  get_questions.py  get_words.py  pom.xml  question2atomese.sh  record.py  sort_questions_by_frequency.sh  unique_questions.py
experiments/opencog/tbd_cognets/: README.md  run_tbd.py  tbd_helpers.py
question2atomeese/: README  question2atomeese.sh
services/MatchingAPI/: CMakeLists.txt  CheckParam.h  Client.cpp  Detect.cpp  DetectInterface.h  Features.cpp  FeaturesInterface.h  Includes.h  MatchingAPI.grpc.pb.cc  MatchingAPI.grpc.pb.h  MatchingAPI.pb.cc  MatchingAPI.pb.h  MatchingAPI.proto  README_Detectors_Api.md  README_Features_Api.md  README_transform_Api.md  Readme.md  Readme_service.md  Server.cpp  Transformations.cpp  Transformations.h  Utilities.cpp  Utilities.h  additionalFunctionForTransforms.cpp  additionalFunctionForTransforms.h  additionalTransformations.cpp  additionalTransformations.h  argvParser.cpp  argvParser.h  build.sh  fromResponseFunctions.cpp  fromResponseFunctions.h  getBOW.cpp  getBOW.h  get_functions.cpp  get_functions.h  pythonModelsWrapper.cpp
services/MatchingAPI/For_docker/: Dockerfile
services/MatchingAPI/Snet/: check_service_load.sh
services/MatchingAPI/models/: experiment.py  getSuperPointKPs.py  superpoint_config.yaml
services/MatchingAPI/models/saved_models/magic-point_coco/: checkpoint  model.ckpt-18000.index
services/MatchingAPI/models/saved_models/superpoint_coco/: checkpoint  model.ckpt-170000.index
services/MatchingAPI/py_examples/: MatchingAPI_pb2.py  MatchingAPI_pb2_grpc.py  getDesc.py  getKP.py  getMatch.py  getTransformParameters.py
services/MinecraftService/: CycleGanInference.py  README_main_usage.md  README_service.md  UGATITInference.py  build.sh  client.py  server.py
services/MinecraftService/For_docker/: Dockerfile
services/vqa-service/: README.md  answer_by_image.py  cli-query.txt  service.proto  service_metadata.json  service_pb2.py  service_pb2_grpc.py  setup.cfg  setup.py  snetd.config.json  vqa_client.py  vqa_service.py
services/vqa-service/docker/: Dockerfile
(+545 files in other folders)
